working without snpeff

--- a/utils/test.ipynb
+++ b/utils/test.ipynb
@@ -1769,6 +1769,346 @@
     "\n",
     "print(identification,version)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 6, 7, 8]"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def get_locus(genbank_file,possible_name):\n",
+    "    count = 1\n",
+    "    locus = []\n",
+    "    handle_gb = open(genbank_file)\n",
+    "    for record in SeqIO.parse(handle_gb, \"genbank\"):\n",
+    "        locus.append(count)\n",
+    "        count+=1\n",
+    "    handle_gb.close()\n",
+    "    if len(locus) == 1:\n",
+    "        return possible_name\n",
+    "    else:\n",
+    "        return locus\n",
+    "\n",
+    "get_locus(\"/home/reusebio/tese/insaflu_snakemake/reference/SARS_CoV_2_COVID_19_Wuhan_Hu_1_MN908947.gb\",\"possible_name\")\n",
+    "get_locus(\"/home/reusebio/tese/insaflu_snakemake/reference/B_Vic_B_Brisbane_60_2008.gbk\",\"possible_name\")\n",
+    "get_locus(\"/home/reusebio/tese/insaflu_snakemake/reference/A_H1N1pdm09_A_Michigan_45_2015.gbk\",\"possible_name\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30331"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f = open(\"/home/reusebio/tese/insaflu_snakemake/reference/SARS_CoV_2_COVID_19_Wuhan_Hu_1_MN908947.fasta\", 'r')\n",
+    "lines = f.readlines()\n",
+    "count = 0\n",
+    "for i in lines[1:]:\n",
+    "    count+= len(i)\n",
+    "count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30402"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f = open(\"/home/reusebio/tese/insaflu_snakemake/projects/covid_testing_5/main_result/SARS_CoV_2/Alignment_nt_SARS_CoV_2.fasta\", 'r')\n",
+    "lines = f.readlines()\n",
+    "count = 0\n",
+    "for i in lines[1:]:\n",
+    "    if i[0] ==\">\":\n",
+    "        break\n",
+    "    count+= len(i)\n",
+    "count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'record.id': 'SARS_CoV_2', 'coverage_dic': {'ERR10039715': ['99.2'], 'ERR10039716': ['99.6'], 'ERR10039718': ['94.9'], 'ERR10039719': ['99.8']}, 'reference_id': 'SARS_CoV_2'}\n",
+      "{'record.id': 'ERR10039715__SARS_CoV_2', 'coverage_dic': {'ERR10039715': ['99.2'], 'ERR10039716': ['99.6'], 'ERR10039718': ['94.9'], 'ERR10039719': ['99.8']}, 'reference_id': 'SARS_CoV_2'}\n",
+      "{'record.id': 'ERR10039716__SARS_CoV_2', 'coverage_dic': {'ERR10039715': ['99.2'], 'ERR10039716': ['99.6'], 'ERR10039718': ['94.9'], 'ERR10039719': ['99.8']}, 'reference_id': 'SARS_CoV_2'}\n",
+      "{'record.id': 'ERR10039718__SARS_CoV_2', 'coverage_dic': {'ERR10039715': ['99.2'], 'ERR10039716': ['99.6'], 'ERR10039718': ['94.9'], 'ERR10039719': ['99.8']}, 'reference_id': 'SARS_CoV_2'}\n",
+      "{'record.id': 'ERR10039719__SARS_CoV_2', 'coverage_dic': {'ERR10039715': ['99.2'], 'ERR10039716': ['99.6'], 'ERR10039718': ['94.9'], 'ERR10039719': ['99.8']}, 'reference_id': 'SARS_CoV_2'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "import sys\n",
+    "from Bio import SeqIO\n",
+    "import get_gene_bank as ggb \n",
+    "import csv\n",
+    "def write_fasta(dictionary, filename):\n",
+    "        import textwrap\n",
+    "        with open(filename, \"w\") as fasta:\n",
+    "            for key, value in dictionary.items():\n",
+    "                fasta.write(f\">{key}\\n\")\n",
+    "                fasta.write(\"\\n\".join(textwrap.wrap(str(value), 70)))\n",
+    "                fasta.write(\"\\n\")\n",
+    "\n",
+    "def get_ref_adjusted_positions(alignment, positions, locus, gene): \n",
+    "    references = []\n",
+    "    new_positions = []\n",
+    "    ref = list(SeqIO.parse(alignment, \"fasta\"))[0]\n",
+    "  \n",
+    "    index_list = []\n",
+    "    for idx in range(len(ref)):\n",
+    "        if ref[idx] != \"-\":\n",
+    "            index_list.append(idx)\n",
+    "    for gene_group in positions:\n",
+    "        if gene_group[0] == gene:\n",
+    "            for group in gene_group[1]:\n",
+    "                group[0] = index_list[group[0]]\n",
+    "                if group[1] >= len(index_list): #if this is == it will throw an error cuz index list é mais pequena que o numero no group[1 ]\n",
+    "                    group[1] = index_list[-1]\n",
+    "                else:\n",
+    "                    # print(len(index_list),group[1])\n",
+    "                    group[1] = index_list[group[1]]\n",
+    "            new_positions.append(gene_group)\n",
+    "    return new_positions\n",
+    "\n",
+    "def get_coverage_to_translate_matrix(filename):\n",
+    "    with open(filename, newline='') as csvfile:\n",
+    "        csv_reader = csv.reader(csvfile, delimiter=',')\n",
+    "        coverage_dic = {}\n",
+    "        for row in csv_reader:\n",
+    "            coverage_dic[row[0]] = row[1:]\n",
+    "    return coverage_dic\n",
+    "\n",
+    "def write_fast_aa(reference,alignment, output, locus, gene, coverage): \n",
+    "    if type(locus) == type(1):\n",
+    "        position = locus - 1 \n",
+    "    else:\n",
+    "        position = 0\n",
+    "    coverage_dic = get_coverage_to_translate_matrix(coverage)\n",
+    "    reference_id = str(locus)\n",
+    "    \n",
+    "    positions = ggb.get_positions_gb(reference)\n",
+    "    positions = get_ref_adjusted_positions(alignment, positions, locus, gene)\n",
+    "    new_consensus = {}\n",
+    "    for gene in positions:\n",
+    "        new_consensus[gene[0]] = {}\n",
+    "        for pos in gene[1]:\n",
+    "            #print(f\"This is {gene[0]} with the pos {pos[0], pos[1]}\") #This is orf1ab with the pos (265, 13468)\n",
+    "            for record in SeqIO.parse(alignment, \"fasta\"):\n",
+    "                identifier = record.id\n",
+    "                print({'record.id':record.id,\n",
+    "                       'coverage_dic':coverage_dic,\n",
+    "                       'reference_id':reference_id,\n",
+    "                    #    'salganhada':coverage_dic[identifier[:identifier.index(f\"__{reference_id}\")]]\n",
+    "                    })\n",
+    "                # print(coverage_dic[reference_id])#[:record.id.index('__'+reference_id)]])\n",
+    "                \n",
+    "                if identifier != reference_id and float(coverage_dic[identifier[:identifier.index(f\"__{reference_id}\")]][position]) >= 90:\n",
+    "                    try:\n",
+    "                        new_consensus[gene[0]][record.id] += record.seq[pos[0]:pos[1]].replace('-','').translate(table=11,to_stop=False)\n",
+    "                    except:\n",
+    "                        new_consensus[gene[0]][record.id] = record.seq[pos[0]:pos[1]].replace('-','').translate(table=11,to_stop=False)\n",
+    "                elif record.id == reference_id:\n",
+    "                    try:\n",
+    "                        new_consensus[gene[0]][record.id] += record.seq[pos[0]:pos[1]].replace('-','').translate(table=11,to_stop=False)\n",
+    "                    except:\n",
+    "                        new_consensus[gene[0]][record.id] = record.seq[pos[0]:pos[1]].replace('-','').translate(table=11,to_stop=False)\n",
+    "    for gene in new_consensus:\n",
+    "        write_fasta(new_consensus[gene], output)\n",
+    "        \n",
+    "if __name__ == '__main__':\n",
+    "    #write_fast_aa(\"reference/SARS_CoV_2_Wuhan_Hu_1_MN908947.gb\",\"SARS_CoV_2\",\"projects/insaflu_comp_1/main_result/mafft/mafft_masked.fasta\",\"projects/insaflu_comp_1/main_result/SARS_CoV_2\")\n",
+    "    reference = \"../reference/SARS_CoV_2_COVID_19_Wuhan_Hu_1_MN908947.gb\"\n",
+    "    alignment = \"../projects/covid_testing_5/main_result/SARS_CoV_2/Alignment_nt_SARS_CoV_2_masked.fasta\"\n",
+    "    output = \"../projects/covid_testing_5/main_result/SARS_CoV_2/Alignment_aa_SARS_CoV_2_N_trans.fasta\"\n",
+    "    locus = \"SARS_CoV_2\"\n",
+    "    gene = \"N\"\n",
+    "    coverage = \"../projects/covid_testing_5/main_result/coverage_translate.csv\"\n",
+    "    try:\n",
+    "        locus = int(locus)\n",
+    "    except:\n",
+    "        locus = locus\n",
+    "\n",
+    "    write_fast_aa(reference, alignment, output, locus, gene, coverage)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "substring not found",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [70], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m identifier \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSARS_CoV_2\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m      3\u001b[0m reference_id \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSARS_CoV_2\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m----> 4\u001b[0m identifier[:\u001b[43midentifier\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mindex\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43mf\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m__\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mreference_id\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m]\n",
+      "\u001b[0;31mValueError\u001b[0m: substring not found"
+     ]
+    }
+   ],
+   "source": [
+    "coverage_dic = {'ERR10039715': ['99.2'], 'ERR10039716': ['99.6'], 'ERR10039718': ['94.9'], 'ERR10039719': ['99.8']}\n",
+    "identifier = 'SARS_CoV_2'\n",
+    "reference_id = 'SARS_CoV_2'\n",
+    "identifier[:identifier.index(f\"__{reference_id}\")]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'SRR10885405': ['100.0', '100.0', '100.0', '100.0', '100.0', '100.0', '100.0', '100.0'], 'SRR10885406': ['87.9', '94.8', '99.7', '92.5', '88.1', '94.5', '79.2', '97.6']}\n",
+      "[['PB2', [[0, 2313]]], ['PB1', [[0, 2259]]], ['PA', [[60, 2181]]], ['HA', [[0, 1758]]], ['NP', [[0, 1683]]], ['NA', [[7, 1408]]], ['M_1', [[0, 747]]], ['M_2', [[806, 1076]]], ['NS', [[0, 849]]]]\n",
+      "[['M_1', [[57, 2486]]]]\n",
+      "{'record.id': '7', 'coverage_dic': {'SRR10885405': ['100.0', '100.0', '100.0', '100.0', '100.0', '100.0', '100.0', '100.0'], 'SRR10885406': ['87.9', '94.8', '99.7', '92.5', '88.1', '94.5', '79.2', '97.6']}, 'reference_id': '7'}\n",
+      "{'record.id': 'SRR10885405__7', 'coverage_dic': {'SRR10885405': ['100.0', '100.0', '100.0', '100.0', '100.0', '100.0', '100.0', '100.0'], 'SRR10885406': ['87.9', '94.8', '99.7', '92.5', '88.1', '94.5', '79.2', '97.6']}, 'reference_id': '7'}\n",
+      "{'record.id': 'SRR10885406__7', 'coverage_dic': {'SRR10885405': ['100.0', '100.0', '100.0', '100.0', '100.0', '100.0', '100.0', '100.0'], 'SRR10885406': ['87.9', '94.8', '99.7', '92.5', '88.1', '94.5', '79.2', '97.6']}, 'reference_id': '7'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "import sys\n",
+    "from Bio import SeqIO\n",
+    "import get_gene_bank as ggb \n",
+    "import csv\n",
+    "\n",
+    "def write_fasta(dictionary, filename):\n",
+    "        import textwrap\n",
+    "        with open(filename, \"w\") as fasta:\n",
+    "            for key, value in dictionary.items():\n",
+    "                fasta.write(f\">{key}\\n\")\n",
+    "                fasta.write(\"\\n\".join(textwrap.wrap(str(value), 70)))\n",
+    "                fasta.write(\"\\n\")\n",
+    "\n",
+    "def get_ref_adjusted_positions(alignment, positions, locus, gene): \n",
+    "    references = []\n",
+    "    new_positions = []\n",
+    "    ref = list(SeqIO.parse(alignment, \"fasta\"))[0]\n",
+    "  \n",
+    "    index_list = []\n",
+    "    for idx in range(len(ref)):\n",
+    "        if ref[idx] != \"-\":\n",
+    "            index_list.append(idx)\n",
+    "    for gene_group in positions:\n",
+    "        if gene_group[0] == gene:\n",
+    "            for group in gene_group[1]:\n",
+    "                group[0] = index_list[group[0]]\n",
+    "                if group[1] >= len(index_list): #if this is == it will throw an error cuz index list é mais pequena que o numero no group[1 ]\n",
+    "                    group[1] = index_list[-1]\n",
+    "                else:\n",
+    "                    # print(len(index_list),group[1])\n",
+    "                    group[1] = index_list[group[1]]\n",
+    "            new_positions.append(gene_group)\n",
+    "    return new_positions\n",
+    "\n",
+    "def get_coverage_to_translate_matrix(filename):\n",
+    "    with open(filename, newline='') as csvfile:\n",
+    "        csv_reader = csv.reader(csvfile, delimiter=',')\n",
+    "        coverage_dic = {}\n",
+    "        for row in csv_reader:\n",
+    "            coverage_dic[row[0]] = row[1:]\n",
+    "    return coverage_dic\n",
+    "\n",
+    "def write_fast_aa(reference,alignment, output, locus, gene, coverage): \n",
+    "    if type(locus) == type(1):\n",
+    "        position = locus - 1 \n",
+    "    else:\n",
+    "        position = 0\n",
+    "    coverage_dic = get_coverage_to_translate_matrix(coverage)\n",
+    "    reference_id = str(locus)\n",
+    "    print(coverage_dic)\n",
+    "    positions = ggb.get_positions_gb(reference)\n",
+    "    print(positions)\n",
+    "\n",
+    "    positions = get_ref_adjusted_positions(alignment, positions, locus, gene)\n",
+    "    print(positions)\n",
+    "    new_consensus = {}\n",
+    "    for gene in positions:\n",
+    "        new_consensus[gene[0]] = {}\n",
+    "        for pos in gene[1]:\n",
+    "            #print(f\"This is {gene[0]} with the pos {pos[0], pos[1]}\") #This is orf1ab with the pos (265, 13468)\n",
+    "            for record in SeqIO.parse(alignment, \"fasta\"):\n",
+    "                print({'record.id':record.id,\n",
+    "                       'coverage_dic':coverage_dic,\n",
+    "                       'reference_id':reference_id,\n",
+    "                       #'salganhada':record.id\n",
+    "                       })\n",
+    "                # print(coverage_dic[reference_id])#[:record.id.index('__'+reference_id)]])\n",
+    "                if record.id != reference_id and float(coverage_dic[record.id[:record.id.index('__'+reference_id)]][position]) >= 90:\n",
+    "                    try:\n",
+    "                        new_consensus[gene[0]][record.id] += record.seq[pos[0]:pos[1]].replace('-','').translate(table=11,to_stop=False)\n",
+    "                    except:\n",
+    "                        new_consensus[gene[0]][record.id] = record.seq[pos[0]:pos[1]].replace('-','').translate(table=11,to_stop=False)\n",
+    "                elif record.id == reference_id:\n",
+    "                    try:\n",
+    "                        new_consensus[gene[0]][record.id] += record.seq[pos[0]:pos[1]].replace('-','').translate(table=11,to_stop=False)\n",
+    "                    except:\n",
+    "                        new_consensus[gene[0]][record.id] = record.seq[pos[0]:pos[1]].replace('-','').translate(table=11,to_stop=False)\n",
+    "    for gene in new_consensus:\n",
+    "        write_fasta(new_consensus[gene], output)\n",
+    "        \n",
+    "if __name__ == '__main__':\n",
+    "    #write_fast_aa(\"reference/SARS_CoV_2_Wuhan_Hu_1_MN908947.gb\",\"SARS_CoV_2\",\"projects/insaflu_comp_1/main_result/mafft/mafft_masked.fasta\",\"projects/insaflu_comp_1/main_result/SARS_CoV_2\")\n",
+    "    reference = \"/home/reusebio/tese/insaflu_snakemake/reference/B_Vic_B_Brisbane_60_2008.gbk\"\n",
+    "    alignment = \"../projects/flu_testing_BVictoria/main_result/7/Alignment_nt_7_masked.fasta\"\n",
+    "    output = \"../projects/flu_testing_BVictoria/main_result/7/Alignment_aa_7_M_1_trans.fasta\"\n",
+    "    locus = \"7\"\n",
+    "    gene = \"M_1\"\n",
+    "    coverage = \"../projects/flu_testing_BVictoria/main_result/coverage_translate.csv\"\n",
+    "    try:\n",
+    "        locus = int(locus)\n",
+    "    except:\n",
+    "        locus = locus\n",
+    "\n",
+    "    write_fast_aa(reference, alignment, output, locus, gene, coverage)\n"
+   ]
   }
  ],
  "metadata": {
