--- a/utils/test.ipynb
+++ b/utils/test.ipynb
@@ -2151,7 +2151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -2163,13 +2163,13 @@
     },
     {
      "ename": "AttributeError",
-     "evalue": "'AxesSubplot' object has no attribute 'ygrid'",
+     "evalue": "'AxesSubplot' object has no attribute 'savefig'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [213], line 23\u001b[0m\n\u001b[1;32m     21\u001b[0m x\u001b[38;5;241m.\u001b[39mset_xlabel(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSNVs at frequency 1-50\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124m (minor iSNVs) and 50-90\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     22\u001b[0m x\u001b[38;5;241m.\u001b[39mset_ylabel(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSamples\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m---> 23\u001b[0m \u001b[43mx\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mygrid\u001b[49m()\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'AxesSubplot' object has no attribute 'ygrid'"
+      "Cell \u001b[0;32mIn [2], line 23\u001b[0m\n\u001b[1;32m     21\u001b[0m x\u001b[38;5;241m.\u001b[39mset_xlabel(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSNVs at frequency 1-50\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124m (minor iSNVs) and 50-90\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     22\u001b[0m x\u001b[38;5;241m.\u001b[39mset_ylabel(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSamples\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m---> 23\u001b[0m \u001b[43mx\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msavefig\u001b[49m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mproportions_iSNVs_graph\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'AxesSubplot' object has no attribute 'savefig'"
      ]
     },
     {
@@ -2206,7 +2206,28 @@
     "x = df.plot.barh(stacked=True,color = [\"#ffc4de\",\"#81cdff\"], )\n",
     "x.set_xlabel('SNVs at frequency 1-50% (minor iSNVs) and 50-90%')\n",
     "x.set_ylabel('Samples')\n",
-    "plt.savefig('proportions_iSNVs_graph')"
+    "x.savefig('proportions_iSNVs_graph')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12109\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('../config/snpeff.config' , 'r') as f:\n",
+    "    lines = f.readlines()\n",
+    "    joined = ''.join(lines)\n",
+    "    find = joined.find(\"SARS_CoV_2_COVID_19_Wuhan_Hu_1_MN908947.genome: SARS_CoV_2_COVID_19_Wuhan_Hu_1_MN908947\\nSARS_CoV_2_COVID_19_Wuhan_Hu_1_MN908947.MN908947.3.codonTable : Bacterial_and_Plant_Plastid\")\n",
+    "    print(find)"
    ]
   }
  ],
