--- a/utils/test.ipynb
+++ b/utils/test.ipynb
@@ -3271,6 +3271,27 @@
     "# with open(file_path, \"w\") as f:\n",
     "#     f.writelines(new_file)   "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'.snakemake/conda/b18fac3468db29b256f7bce43268530c_'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "string = \"/home/reusebio/tese/insaflu_snakemake/.snakemake/conda/b18fac3468db29b256f7bce43268530c_\"\n",
+    "string[string.index('.snakemake'):]\n"
+   ]
   }
  ],
  "metadata": {
