[add] Create consensus files dependent on coverage

--- a/utils/test.ipynb
+++ b/utils/test.ipynb
@@ -3292,6 +3292,152 @@
     "string = \"/home/reusebio/tese/insaflu_snakemake/.snakemake/conda/b18fac3468db29b256f7bce43268530c_\"\n",
     "string[string.index('.snakemake'):]\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "from Bio import SeqIO\n",
+    "from get_locus import get_locus\n",
+    "import csv\n",
+    "import re\n",
+    "\n",
+    "def get_fasta_reference_concat(fasta_ref):\n",
+    "    concat_reference = []\n",
+    "    count = 0\n",
+    "    for record in SeqIO.parse(fasta_ref, \"fasta\"):\n",
+    "        if count == 0:\n",
+    "            concat_reference.append(record)\n",
+    "            start = fasta_ref.index('reference')\n",
+    "            end = fasta_ref.index('.fasta')\n",
+    "            concat_reference[0].id = fasta_ref[start+10:end]\n",
+    "        else:\n",
+    "            concat_reference[0].seq += record.seq\n",
+    "        count += 1\n",
+    "    return concat_reference[0]\n",
+    "\n",
+    "def get_id_sequence_from_consensus(consensus,sample_name, value_list):\n",
+    "    concat_consensus = []\n",
+    "    count = 1\n",
+    "\n",
+    "    starting_segment = value_list[0]\n",
+    "    for record in SeqIO.parse(consensus, \"fasta\"):\n",
+    "        if count == starting_segment:\n",
+    "            concat_consensus.append(record)\n",
+    "            concat_consensus[0].id = sample_name\n",
+    "        elif count in value_list:\n",
+    "            concat_consensus[0].seq += record.seq\n",
+    "        count += 1\n",
+    "    return concat_consensus[0]\n",
+    "\n",
+    "def get_id_sequence_from_consensus_strict(consensus,sample_name, value_list):\n",
+    "    concat_consensus = []\n",
+    "    count = 1\n",
+    "    starting_segment = value_list[0]\n",
+    "    for record in SeqIO.parse(consensus, \"fasta\"):\n",
+    "        if count == starting_segment:\n",
+    "            concat_consensus.append(record)\n",
+    "            concat_consensus[0].id = sample_name\n",
+    "        elif count in value_list:\n",
+    "            concat_consensus[0].seq += record.seq\n",
+    "        count += 1\n",
+    "    return concat_consensus[0]\n",
+    "\n",
+    "    \n",
+    "\n",
+    "\n",
+    "alignment = sys.argv[1]\n",
+    "reference_gb = sys.argv[2]\n",
+    "species = sys.argv[3]\n",
+    "output = sys.argv[4]\n",
+    "coverage_file = sys.argv[5]\n",
+    "output_only_90_plus = sys.argv[6]\n",
+    "\n",
+    "# consensus = '../projects/flu_testing_BVictoria/sample_SRR10885405/snippy/SRR10885405_consensus.fasta ../projects/flu_testing_BVictoria/sample_SRR10885406/snippy/SRR10885406_consensus.fasta'.split(' ')\n",
+    "reference_gb = \"../reference/B_Vic_B_Brisbane_60_2008.gbk\"\n",
+    "species = \"Flu\"\n",
+    "output = \"../projects/flu_testing_BVictoria/main_result/All_nt.fasta\"\n",
+    "coverage_file = \"../projects/flu_testing_BVictoria/main_result/coverage_translate.csv\"\n",
+    "fasta_file = '../reference/B_Vic_B_Brisbane_60_2008.fasta'\n",
+    "output_only_90_plus = \"../projects/flu_testing_BVictoria/main_result/All_nt_only_90plus.fasta\"\n",
+    "\n",
+    "with open(coverage_file, newline='') as csvfile:\n",
+    "            csv_reader = csv.reader(csvfile, delimiter=',')\n",
+    "            coverage_list = list(csv_reader)\n",
+    "\n",
+    "for row in coverage_list:\n",
+    "    for value in range(len(row)-1, 0, -1):\n",
+    "        # print(row[value])\n",
+    "        if float(row[value]) > 90:\n",
+    "            row[value] = value\n",
+    "        else:\n",
+    "            row.pop(value)\n",
+    "\n",
+    "coverage_dic = {}\n",
+    "for i in coverage_list:\n",
+    "    coverage_dic[i[0]] = i[1:]\n",
+    "\n",
+    "\n",
+    "fasta_reference_concat = get_fasta_reference_concat(fasta_file)\n",
+    "new_concat_file = [fasta_reference_concat]\n",
+    "new_concat_file_strict = [fasta_reference_concat]\n",
+    "if species == 'Flu':\n",
+    "    for file in consensus:\n",
+    "        sample_name = re.findall(\"(?<=/snippy/)(.*?)(?=_consensus.fasta)\",file)[0]\n",
+    "        if len(coverage_dic[sample_name]) > 0:\n",
+    "            new_sequence = get_id_sequence_from_consensus(file,sample_name,coverage_dic[sample_name])\n",
+    "            new_concat_file.append(new_sequence)\n",
+    "        if len(coverage_dic[sample_name]) == 8:\n",
+    "            new_sequence = get_id_sequence_from_consensus_strict(file,sample_name,coverage_dic[sample_name])\n",
+    "            new_concat_file_strict.append(new_sequence)\n",
+    "    SeqIO.write(new_concat_file, output_only_90_plus, \"fasta\")\n",
+    "    SeqIO.write(new_concat_file_strict, output, \"fasta\")\n",
+    "\n",
+    "else:\n",
+    "    for file in consensus:\n",
+    "        sample_name = re.findall(\"(?<=/snippy/)(.*?)(?=_consensus.fasta)\",file)[0]\n",
+    "        if len(coverage_dic[sample_name]) == 1:\n",
+    "            new_sequence = get_id_sequence_from_consensus_strict(file,sample_name,coverage_dic[sample_name])\n",
+    "            new_concat_file_strict.append(new_sequence)\n",
+    "    SeqIO.write(new_concat_file_strict, output_only_90_plus, \"fasta\")\n",
+    "    SeqIO.write(new_concat_file_strict, output, \"fasta\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'SRR10885405'"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "file = '../projects/flu_testing_BVictoria/sample_SRR10885405/snippy/SRR10885405_consensus.fasta'\n",
+    "sample_name = re.findall(\"(?<=/snippy/)(.*?)(?=_consensus.fasta)\",file)[0]\n",
+    "sample_name"
+   ]
   }
  ],
  "metadata": {
