--- a/utils/test.ipynb
+++ b/utils/test.ipynb
@@ -3438,6 +3438,229 @@
     "sample_name = re.findall(\"(?<=/snippy/)(.*?)(?=_consensus.fasta)\",file)[0]\n",
     "sample_name"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['MPXV-USA_2022_MA001-001',\n",
+       " 'MPXV-USA_2022_MA001-002',\n",
+       " 'MPXV-USA_2022_MA001-003',\n",
+       " 'MPXV-USA_2022_MA001-004',\n",
+       " 'MPXV-USA_2022_MA001-005',\n",
+       " 'MPXV-USA_2022_MA001-006',\n",
+       " 'MPXV-USA_2022_MA001-007',\n",
+       " 'MPXV-USA_2022_MA001-008',\n",
+       " 'MPXV-USA_2022_MA001-009',\n",
+       " 'MPXV-USA_2022_MA001-010',\n",
+       " 'MPXV-USA_2022_MA001-011',\n",
+       " 'MPXV-USA_2022_MA001-012',\n",
+       " 'MPXV-USA_2022_MA001-013',\n",
+       " 'MPXV-USA_2022_MA001-014',\n",
+       " 'MPXV-USA_2022_MA001-015',\n",
+       " 'MPXV-USA_2022_MA001-016',\n",
+       " 'MPXV-USA_2022_MA001-017',\n",
+       " 'MPXV-USA_2022_MA001-018',\n",
+       " 'MPXV-USA_2022_MA001-019',\n",
+       " 'MPXV-USA_2022_MA001-020',\n",
+       " 'MPXV-USA_2022_MA001-021',\n",
+       " 'MPXV-USA_2022_MA001-022',\n",
+       " 'MPXV-USA_2022_MA001-023',\n",
+       " 'MPXV-USA_2022_MA001-024',\n",
+       " 'MPXV-USA_2022_MA001-025',\n",
+       " 'MPXV-USA_2022_MA001-026',\n",
+       " 'MPXV-USA_2022_MA001-027',\n",
+       " 'MPXV-USA_2022_MA001-028',\n",
+       " 'MPXV-USA_2022_MA001-029',\n",
+       " 'MPXV-USA_2022_MA001-030',\n",
+       " 'MPXV-USA_2022_MA001-031',\n",
+       " 'MPXV-USA_2022_MA001-032',\n",
+       " 'MPXV-USA_2022_MA001-033',\n",
+       " 'MPXV-USA_2022_MA001-034',\n",
+       " 'MPXV-USA_2022_MA001-035',\n",
+       " 'MPXV-USA_2022_MA001-036',\n",
+       " 'MPXV-USA_2022_MA001-037',\n",
+       " 'MPXV-USA_2022_MA001-038',\n",
+       " 'MPXV-USA_2022_MA001-039',\n",
+       " 'MPXV-USA_2022_MA001-040',\n",
+       " 'MPXV-USA_2022_MA001-041',\n",
+       " 'MPXV-USA_2022_MA001-042',\n",
+       " 'MPXV-USA_2022_MA001-043',\n",
+       " 'MPXV-USA_2022_MA001-044',\n",
+       " 'MPXV-USA_2022_MA001-045',\n",
+       " 'MPXV-USA_2022_MA001-046',\n",
+       " 'MPXV-USA_2022_MA001-047',\n",
+       " 'MPXV-USA_2022_MA001-048',\n",
+       " 'MPXV-USA_2022_MA001-049',\n",
+       " 'MPXV-USA_2022_MA001-050',\n",
+       " 'MPXV-USA_2022_MA001-051',\n",
+       " 'MPXV-USA_2022_MA001-052',\n",
+       " 'MPXV-USA_2022_MA001-053',\n",
+       " 'MPXV-USA_2022_MA001-054',\n",
+       " 'MPXV-USA_2022_MA001-055',\n",
+       " 'MPXV-USA_2022_MA001-056',\n",
+       " 'MPXV-USA_2022_MA001-057',\n",
+       " 'MPXV-USA_2022_MA001-058',\n",
+       " 'MPXV-USA_2022_MA001-059',\n",
+       " 'MPXV-USA_2022_MA001-060',\n",
+       " 'MPXV-USA_2022_MA001-061',\n",
+       " 'MPXV-USA_2022_MA001-062',\n",
+       " 'MPXV-USA_2022_MA001-063',\n",
+       " 'MPXV-USA_2022_MA001-064',\n",
+       " 'MPXV-USA_2022_MA001-065',\n",
+       " 'MPXV-USA_2022_MA001-066',\n",
+       " 'MPXV-USA_2022_MA001-067',\n",
+       " 'MPXV-USA_2022_MA001-068',\n",
+       " 'MPXV-USA_2022_MA001-069',\n",
+       " 'MPXV-USA_2022_MA001-070',\n",
+       " 'MPXV-USA_2022_MA001-071',\n",
+       " 'MPXV-USA_2022_MA001-072',\n",
+       " 'MPXV-USA_2022_MA001-073',\n",
+       " 'MPXV-USA_2022_MA001-074',\n",
+       " 'MPXV-USA_2022_MA001-075',\n",
+       " 'MPXV-USA_2022_MA001-076',\n",
+       " 'MPXV-USA_2022_MA001-077',\n",
+       " 'MPXV-USA_2022_MA001-078',\n",
+       " 'MPXV-USA_2022_MA001-079',\n",
+       " 'MPXV-USA_2022_MA001-080',\n",
+       " 'MPXV-USA_2022_MA001-081',\n",
+       " 'MPXV-USA_2022_MA001-082',\n",
+       " 'MPXV-USA_2022_MA001-083',\n",
+       " 'MPXV-USA_2022_MA001-084',\n",
+       " 'MPXV-USA_2022_MA001-085',\n",
+       " 'MPXV-USA_2022_MA001-086',\n",
+       " 'MPXV-USA_2022_MA001-087',\n",
+       " 'MPXV-USA_2022_MA001-088',\n",
+       " 'MPXV-USA_2022_MA001-089',\n",
+       " 'MPXV-USA_2022_MA001-090',\n",
+       " 'MPXV-USA_2022_MA001-091',\n",
+       " 'MPXV-USA_2022_MA001-092',\n",
+       " 'MPXV-USA_2022_MA001-093',\n",
+       " 'MPXV-USA_2022_MA001-094',\n",
+       " 'MPXV-USA_2022_MA001-095',\n",
+       " 'MPXV-USA_2022_MA001-096',\n",
+       " 'MPXV-USA_2022_MA001-097',\n",
+       " 'MPXV-USA_2022_MA001-098',\n",
+       " 'MPXV-USA_2022_MA001-099',\n",
+       " 'MPXV-USA_2022_MA001-100',\n",
+       " 'MPXV-USA_2022_MA001-101',\n",
+       " 'MPXV-USA_2022_MA001-102',\n",
+       " 'MPXV-USA_2022_MA001-103',\n",
+       " 'MPXV-USA_2022_MA001-104',\n",
+       " 'MPXV-USA_2022_MA001-105',\n",
+       " 'MPXV-USA_2022_MA001-106',\n",
+       " 'MPXV-USA_2022_MA001-107',\n",
+       " 'MPXV-USA_2022_MA001-108',\n",
+       " 'MPXV-USA_2022_MA001-109',\n",
+       " 'MPXV-USA_2022_MA001-110',\n",
+       " 'MPXV-USA_2022_MA001-111',\n",
+       " 'MPXV-USA_2022_MA001-112',\n",
+       " 'MPXV-USA_2022_MA001-113',\n",
+       " 'MPXV-USA_2022_MA001-114',\n",
+       " 'MPXV-USA_2022_MA001-115',\n",
+       " 'MPXV-USA_2022_MA001-116',\n",
+       " 'MPXV-USA_2022_MA001-117',\n",
+       " 'MPXV-USA_2022_MA001-118',\n",
+       " 'MPXV-USA_2022_MA001-119',\n",
+       " 'MPXV-USA_2022_MA001-120',\n",
+       " 'MPXV-USA_2022_MA001-121',\n",
+       " 'MPXV-USA_2022_MA001-122',\n",
+       " 'MPXV-USA_2022_MA001-123',\n",
+       " 'MPXV-USA_2022_MA001-124',\n",
+       " 'MPXV-USA_2022_MA001-125',\n",
+       " 'MPXV-USA_2022_MA001-126',\n",
+       " 'MPXV-USA_2022_MA001-127',\n",
+       " 'MPXV-USA_2022_MA001-128',\n",
+       " 'MPXV-USA_2022_MA001-129',\n",
+       " 'MPXV-USA_2022_MA001-130',\n",
+       " 'MPXV-USA_2022_MA001-131',\n",
+       " 'MPXV-USA_2022_MA001-132',\n",
+       " 'MPXV-USA_2022_MA001-133',\n",
+       " 'MPXV-USA_2022_MA001-134',\n",
+       " 'MPXV-USA_2022_MA001-135',\n",
+       " 'MPXV-USA_2022_MA001-136',\n",
+       " 'MPXV-USA_2022_MA001-137',\n",
+       " 'MPXV-USA_2022_MA001-138',\n",
+       " 'MPXV-USA_2022_MA001-139',\n",
+       " 'MPXV-USA_2022_MA001-140',\n",
+       " 'MPXV-USA_2022_MA001-141',\n",
+       " 'MPXV-USA_2022_MA001-142',\n",
+       " 'MPXV-USA_2022_MA001-143',\n",
+       " 'MPXV-USA_2022_MA001-144',\n",
+       " 'MPXV-USA_2022_MA001-145',\n",
+       " 'MPXV-USA_2022_MA001-146',\n",
+       " 'MPXV-USA_2022_MA001-147',\n",
+       " 'MPXV-USA_2022_MA001-148',\n",
+       " 'MPXV-USA_2022_MA001-149',\n",
+       " 'MPXV-USA_2022_MA001-150',\n",
+       " 'MPXV-USA_2022_MA001-151',\n",
+       " 'MPXV-USA_2022_MA001-152',\n",
+       " 'MPXV-USA_2022_MA001-153',\n",
+       " 'MPXV-USA_2022_MA001-154',\n",
+       " 'MPXV-USA_2022_MA001-155',\n",
+       " 'MPXV-USA_2022_MA001-156',\n",
+       " 'MPXV-USA_2022_MA001-157',\n",
+       " 'MPXV-USA_2022_MA001-158',\n",
+       " 'MPXV-USA_2022_MA001-159',\n",
+       " 'MPXV-USA_2022_MA001-160',\n",
+       " 'MPXV-USA_2022_MA001-161',\n",
+       " 'MPXV-USA_2022_MA001-162',\n",
+       " 'MPXV-USA_2022_MA001-163',\n",
+       " 'MPXV-USA_2022_MA001-164',\n",
+       " 'MPXV-USA_2022_MA001-165',\n",
+       " 'MPXV-USA_2022_MA001-166',\n",
+       " 'MPXV-USA_2022_MA001-167',\n",
+       " 'MPXV-USA_2022_MA001-168',\n",
+       " 'MPXV-USA_2022_MA001-169',\n",
+       " 'MPXV-USA_2022_MA001-170',\n",
+       " 'MPXV-USA_2022_MA001-171',\n",
+       " 'MPXV-USA_2022_MA001-172',\n",
+       " 'MPXV-USA_2022_MA001-173',\n",
+       " 'MPXV-USA_2022_MA001-174',\n",
+       " 'MPXV-USA_2022_MA001-175',\n",
+       " 'MPXV-USA_2022_MA001-176',\n",
+       " 'MPXV-USA_2022_MA001-177',\n",
+       " 'MPXV-USA_2022_MA001-178',\n",
+       " 'MPXV-USA_2022_MA001-179',\n",
+       " 'MPXV-USA_2022_MA001-180',\n",
+       " 'MPXV-USA_2022_MA001-181',\n",
+       " 'MPXV-USA_2022_MA001-182',\n",
+       " 'MPXV-USA_2022_MA001-183',\n",
+       " 'MPXV-USA_2022_MA001-184',\n",
+       " 'MPXV-USA_2022_MA001-185',\n",
+       " 'MPXV-USA_2022_MA001-186',\n",
+       " 'MPXV-USA_2022_MA001-187',\n",
+       " 'MPXV-USA_2022_MA001-188',\n",
+       " 'MPXV-USA_2022_MA001-189',\n",
+       " 'MPXV-USA_2022_MA001-190']"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from Bio import SeqIO\n",
+    "\n",
+    "genes = []\n",
+    "genbank_file = '../reference/monkeypox_MPXV_USA_2022_MA001_ON563414.gb'\n",
+    "handle_gb = open(genbank_file)\n",
+    "for record in SeqIO.parse(handle_gb, \"genbank\"):\n",
+    "    for features in record.features:\n",
+    "        if (features.type == 'CDS'):\n",
+    "            try:\n",
+    "                genes.append(features.qualifiers[\"gene\"][0])\n",
+    "            except:\n",
+    "                genes.append(features.qualifiers[\"locus_tag\"][0])\n",
+    "handle_gb.close()\n",
+    "\n",
+    "genes\n"
+   ]
   }
  ],
  "metadata": {
