msa masker consensus sequences

--- a/utils/test.ipynb
+++ b/utils/test.ipynb
@@ -3661,6 +3661,115 @@
     "\n",
     "genes\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[SeqRecord(seq=Seq('ATTAAAGGTTTATACCTTCCCAGGTAACAAACCAACCAACTTTCGATCTCTTGT...AAA'), id='SARS_CoV_2_ref', name='SARS_CoV_2', description='SARS_CoV_2 Severe acute respiratory syndrome coronavirus 2 isolate Wuhan-Hu-1, complete genome', dbxrefs=[]), SeqRecord(seq=Seq('ATTAAAGGTTTATACCTTCCCAGGTAACAAACCAACCAACTTTCGATCTCTTGT...AAA'), id='SARS_CoV_2', name='SARS_CoV_2', description='SARS_CoV_2 Severe acute respiratory syndrome coronavirus 2 isolate Wuhan-Hu-1, complete genome', dbxrefs=[])]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from Bio import SeqIO\n",
+    "\n",
+    "reference_fasta = '/home/reusebio/tese/insaflu_snakemake/reference/SARS_CoV_2_COVID_19_Wuhan_Hu_1_MN908947.fasta'\n",
+    "consensus_file = '/home/reusebio/tese/insaflu_snakemake/align_samples/ERR10039715/snippy/snps.consensus.fa'\n",
+    "with open(reference_fasta, \"r\") as handle_fasta:\n",
+    "    dt_consensus = SeqIO.to_dict(SeqIO.parse(consensus_file, \"fasta\"))\n",
+    "    for record in SeqIO.parse(handle_fasta, \"fasta\"):\n",
+    "        if (record.id in dt_consensus and True):\t### make mask\n",
+    "            ### get sequences\n",
+    "            vect_out_fasta_to_align = []\n",
+    "            record_id = record.id \n",
+    "            record.id = record.id + \"_ref\"\n",
+    "            vect_out_fasta_to_align.append(record)\n",
+    "            vect_out_fasta_to_align.append(dt_consensus[record_id])\n",
+    "            print(vect_out_fasta_to_align)\n",
+    "            with open('test.fasta', \"w\") as handle_fasta_out_align:\n",
+    "                SeqIO.write(vect_out_fasta_to_align, handle_fasta_out_align, \"fasta\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "from Bio import SeqIO\n",
+    "\n",
+    "consensus_file = sys.argv[1]\n",
+    "output_file = sys.argv[2]\n",
+    "\n",
+    "dt_consensus = SeqIO.to_dict(SeqIO.parse(consensus_file, \"fasta\"))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['SARS_CoV_2']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from Bio import SeqIO\n",
+    "\n",
+    "def get_locus(genbank_file):\n",
+    "    \"\"\"\n",
+    "    The get_locus function takes a genbank file and returns the locus number of that record.\n",
+    "    If there is only one record in the genbank file, it will return the possible_name. If there are multiple records, \n",
+    "    it will return a list of all locus numbers.\n",
+    "    \n",
+    "    :param genbank_file: Open the genbank file, and then parse it using seqio\n",
+    "    :param possible_name: Determine if the file is a single genbank file or not\n",
+    "    :return: A list of locus numbers\n",
+    "    :doc-author: Trelent\n",
+    "    \"\"\"\n",
+    "    locus = []\n",
+    "    handle_gb = open(genbank_file)\n",
+    "    for record in SeqIO.parse(handle_gb, \"genbank\"):\n",
+    "        locus.append(record.name)\n",
+    "    return locus\n",
+    "get_locus('/home/reusebio/tese/insaflu_snakemake/reference/SARS_CoV_2_COVID_19_Wuhan_Hu_1_MN908947.gb')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'align_samples/{sample}/medaka/'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "file_path = \"align_samples/{sample}/medaka/{REFERENCE_NAME}.depth\"\n",
+    "last_pos = len(file_path) - file_path[::-1].index(\"/\")\n",
+    "path = file_path[:last_pos]\n",
+    "path"
+   ]
   }
  ],
  "metadata": {
